//
//
//  @ Project : Untitled
//  @ File Name : TDeliveryIrregular.cs
//  @ Date : 12/14/2013
//  @ Author : khoatd
//
//


namespace Supervisor.thrift.TEntity
{
	public class TDeliveryIrregular 
	{
		public string _id ;
		public string _senderName ;
		public string _senderPhone ;
		public string _recipientName ;
		public string _recipientPhone ;
		public string _recipientIdNo ;
		public int _quantity ;
		public double _cost ;
		public double _value ;
		public string _receive_date ;
		public string _user_confirm_id ;
		public string _sendDate ;
	}
}
